update 05112025 nach erstem erfolgreichen Installer